# LingJingToDo

./: .editorconfig  .eslintignore  .eslintrc.cjs  .prettierignore  README.md  README_OLD.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.ollamassist/conversations/: a6e5273e-6130-494c-9cb6-9fb2221b5c3c.json
docs/: README.md  api-reference.md  architecture.md  css-split-summary.md  data-loading-optimization.md  developer-guide.md  error-handling-enhancement.md  file-storage-optimization.md  optimization-and-extension.md  pinia-migration-guide.md  recent-files-enhancement.md  task-highlight-feature.md  task-tree-highlight.md  user-manual.md  使用文档.md  灵境待办.html  项目优化与问题清单.md  项目全面分析报告.md  项目分析报告.md
lingjing_server/: Cargo.toml  installer.nsi  tauri.conf.json
lingjing_server/.cargo/: config.toml
lingjing_server/capabilities/: default.json
lingjing_server/src/: backup.rs  config.rs  error.rs  error_logger.rs  file_ops.rs  lib.rs  main.rs  migration.rs  query_cache.rs  query_optimizer.rs  recovery.rs  sharded_store.rs  storage_optimized.rs  task_index.rs  tasks.rs
lingjing_uiux/: App.vue  README_TODO.md  main.ts  types.ts
lingjing_uiux/assets/: buttons.css  common-components.css  components-common.css  components.css  config.css  main.css  statusbar.css  tasks.css  themes.css  titlebar.css  todo.css
lingjing_uiux/common/: Dialog.vue
lingjing_uiux/components/: HistoryFilesEnhanced.vue  LingJingToDo.vue
lingjing_uiux/composables/: useAppLifecycle.ts  (+22 more)
scripts/: add-toolbar-themes.txt  split-css.js  test-build.js  update-icons.cjs
(+111 files in other folders)
